<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sell It</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="recovery_email">Recovery Email</string>
    <string name="recover_password">Forgot Password? Reset it here.</string>
    <string name="action_settings">Settings</string>
    <string name="change_photo">Change Photo</string>
    <string name="save_changes">Save Changes</string>
    <string name="first_layout">Home</string>
    <string name="second_layout">Settings</string>
    <string name="third_layout">Donate</string>
    <string name="fourth_layout">Sign Out</string>
    <string name="signOut">Sign Out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="browse">Items</string>
    <string name="defLab">Default Label</string>
    <string name="itemName">Item Name</string>
    <string name="password">Password</string>
    <string name="desc">Description</string>
    <string name="firstName">First Name</string>
    <string name="attributions">Attributions</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="sign_Out">Sign Out?</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="takePhoto">Take Photo</string>
    <string name="submit">Submit</string>
    <string name="addItem">Add Item</string>
    <string name="editItem">Edit Item</string>
    <string name="addPhoto">Add Photo</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="comment">Comment</string>
    <string name="ownerNameVar">Owner Name Var</string>
    <string name="itemDescVar">Item Desc Var</string>
    <string name="categoryVar">Category Var</string>
    <string name="priceVar">Price Var</string>
    <string name="itemNameVar">Item Name Var</string>
    <string name="userNameVar">User Name Var</string>
    <string name="contact">Contact</string>
    <string name="create_one">Don\'t have an account? Then create one!</string>
    <string name="signIn">Sign In</string>
    <string name="userName">Username</string>
    <string name="create_account">Create Account</string>
    <string name="continueBtn">Continue</string>
    <string name="sign_in">Already have an account? Sign in!</string>
    <string name="signUp">Create Account</string>
    <string name="usernameVar">Username Var</string>
    <string name="userDescVar">Description Variable</string>
    <string name="goalsVar">Goals Variable</string>
    <string name="goalProg">Goal Progress</string>
    <string name="percVar">percent variable</string>
    <string name="donate">Donate</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="spinnerPrompt">Condition</string>
    <string name="donations">Donations</string>
    <string name="goals">Goals</string>
    <string name="newDonation">New Donation</string>
    <string name="username">Username</string>
    <string name="userGoal">User\'s Current Goal:</string>
    <string-array name="spinner">
        <item>Furniture</item>
        <item>Electronics</item>
        <item>Fashion and Clothes</item>
        <item>Home and Garden</item>
        <item>Outdoor Activities</item>
        <item>Books and Music</item>
        <item>Other</item>
    </string-array>

    <string-array name="states">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="itemtitle">ItemTitle</string>
    <string name="description">Description</string>
</resources>
