<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Profile Image the user wants to use is shown here, having a weight of .5 on the vertical,
    linear layout-->
    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".5"
        android:contentDescription="@string/desc"
        app:srcCompat="@mipmap/ic_launcher" />

    <!-- Space between the profile image and the username-->
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <!-- The user's username is shown here-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/usernameVar"
        android:textSize="25sp" />

    <!-- Space between the username and the Goal Progress text view-->
    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <!-- Text view for the words "Goal Progress"-->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/goalProg" />

    <!-- Horizontal, linear layout for the progress bar and the visual percentage-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- The user's progress to completing their goal-->
        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="100"
            android:progress="0" />

        <!-- The percent of which the progress bar is at-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/percVar" />

    </LinearLayout>

    <!-- A donate button to directly donate money to the user's progress-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/donate"/>

    <!-- Space between the "Donate" button and the user's description-->
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <!-- The user's description of themselves and their goal-->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:layout_gravity="center"
        android:text="@string/userDescVar" />

    <!-- Space between the user's description and their list of items-->
    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".125"/>

    <!-- Text View that shows the word "Items" above the list of their items-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/browse"/>

    <!-- List View to show the user's list of items they have up for sale-->
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".5" />
</LinearLayout>
