<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25" />

    <TextView
        android:id="@+id/studentUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/username"
        android:labelFor="@+id/studentUsername"
        />

    <EditText
        android:id="@+id/studentFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="Full Name"
        android:inputType="textPersonName"
        android:labelFor="@+id/studentFullName" />

    <EditText
        android:id="@+id/studentEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:labelFor="@id/studentEmail" />

    <EditText
        android:id="@+id/cityInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:labelFor="@+id/cityInput" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"/>

        <Spinner
            android:id="@+id/spinnerStudentSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">
        </Spinner>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"/>
    </LinearLayout>

        <Button
            android:id="@+id/studentSaveBtn"
            android:layout_width="153dp"
            android:layout_height="50dp"
            android:text="Save"
            android:layout_gravity="center_horizontal"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/addGoalBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/goals"/>

</LinearLayout>
